fix layout shifts, remove login page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,6 @@ body {
 }
 
 .font-lalezar {
-  font-family: "Lalezar";
+  font-family: var(--font-lalezar);
   @apply text-gray-800;
 }
